--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -763,4 +763,12 @@
 	<string name="breadcrumbs_separator" translatable="false"><![CDATA[" > "]]></string>
 	<string name="access_denied_403">Access denied (403)</string>
 	<string name="max_backups_count">Max number of backups</string>
+	<string name="api_telegram_check">Check API work</string>
+	<string name="api_check_desc">Click to check the operation of the Telegram Bot API</string>
+	<string name="api_is_work">Kotatsu backup in Telegram is working!!</string>
+	<string name="api_net_error">Network error! Check your Net</string>
+	<string name="id_not_set">Chat ID is not set!</string>
+	<string name="api_check_success">Success! Check Telegram Bot</string>
+	<string name="api_check_error">OOPS! Something went wrong</string>
+	<string name="api_error">Network error!</string>
 </resources>
