--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -765,4 +765,6 @@
 	<string name="max_backups_count">Max number of backups</string>
 	<string name="delete_old_backups">Delete old backups</string>
 	<string name="delete_old_backups_summary">Automatically delete old backup files to save storage space</string>
+	<string name="handle_links">Handle links</string>
+	<string name="handle_links_summary">Handle manga links from external applications (e.g. web browser). You may also need to enable it manually in the application\'s system settings</string>
 </resources>
