Error handling fixes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -769,4 +769,5 @@
 	<string name="handle_links_summary">Handle manga links from external applications (e.g. web browser). You may also need to enable it manually in the application\'s system settings</string>
 	<string name="email">Email</string>
 	<string name="captcha_required_message">This source requires solving a captcha to continue</string>
+	<string name="error_connection_reset">Connection reset by remote host</string>
 </resources>
