Telegram backups refactoring stage 1

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -778,12 +778,9 @@
 	<!-- Button label, should be as short as possible -->
 	<string name="incognito">Incognito</string>
 	<string name="error_connection_reset">Connection reset by remote host</string>
-	<string name="api_telegram_check">Check API work</string>
-	<string name="api_check_desc">Click to check the operation of the Telegram Bot API</string>
-	<string name="api_is_work">Kotatsu backup in Telegram is working!!</string>
-	<string name="api_net_error">Network error! Check your Net</string>
-	<string name="id_not_set">Chat ID is not set!</string>
-	<string name="api_check_success">Success! Check Telegram Bot</string>
-	<string name="api_check_error">OOPS! Something went wrong</string>
-	<string name="api_error">Network error!</string>
+	<string name="backup_tg_check">Check if API works</string>
+	<string name="backup_tg_echo">Kotatsu backup in Telegram is working!!</string>
+	<string name="backup_tg_id_not_set">Chat ID is not set</string>
+	<string name="telegram_chat_id">Telegram chat ID</string>
+	<string name="open_telegram_bot">Open the Telegram bot</string>
 </resources>
