Screen rotation button in reader

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -798,4 +798,6 @@
 	<string name="reader_controls_in_bottom_bar">Reader controls in bottom bar</string>
 	<string name="chapters_and_pages">Chapters and pages</string>
 	<string name="pages_slider">Page switch slider</string>
+	<string name="screen_rotation_locked">Screen rotation has been locked</string>
+	<string name="screen_rotation_unlocked">Screen rotation has been unlocked</string>
 </resources>
