--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -801,4 +801,5 @@
 	<string name="screen_rotation_locked">Screen rotation has been locked</string>
 	<string name="screen_rotation_unlocked">Screen rotation has been unlocked</string>
 	<string name="badges_in_lists">Badges in lists</string>
+	<string name="search_everywhere">Search everywhere</string>
 </resources>
