--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -802,4 +802,5 @@
 	<string name="screen_rotation_unlocked">Screen rotation has been unlocked</string>
 	<string name="badges_in_lists">Badges in lists</string>
 	<string name="search_everywhere">Search everywhere</string>
+	<string name="simple">Simple</string>
 </resources>
