UI improvements and author search support

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -803,4 +803,5 @@
 	<string name="badges_in_lists">Badges in lists</string>
 	<string name="search_everywhere">Search everywhere</string>
 	<string name="simple">Simple</string>
+	<string name="global_search">Global search</string>
 </resources>
