--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -804,4 +804,6 @@
 	<string name="search_everywhere">Search everywhere</string>
 	<string name="simple">Simple</string>
 	<string name="global_search">Global search</string>
+	<string name="disable_captcha_notifications">Disable captcha notifications</string>
+	<string name="disable_captcha_notifications_summary">You will not receive notifications about solving CAPTCHA for this source but this can lead to breaking background operations (checking for new chapters, obtaining recommendations, etc)</string>
 </resources>
