--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -818,4 +818,5 @@
 	<string name="link_to_manga_in_app">Link to manga in Kotatsu</string>
 	<string name="clear_browser_data">Clear browser data</string>
 	<string name="clear_browser_data_summary">Clear browser data such as cache and cookies. Warning: Authorization in manga sources may become invalid</string>
+	<string name="no_write_permission_to_file">Does not have permission to write a file</string>
 </resources>
