--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<string name="app_name" translatable="false">Kotatsu</string>
 	<string name="local_storage">Local storage</string>
-	<string name="favourites">Favourites</string>
+	<string name="favourites">Favorites</string>
 	<string name="history">History</string>
 	<string name="error_occurred">An error occurred</string>
 	<string name="network_error">Network error</string>
@@ -25,8 +25,8 @@
 	<string name="nothing_found">Nothing found</string>
 	<string name="history_is_empty">No history yet</string>
 	<string name="read">Read</string>
-	<string name="you_have_not_favourites_yet">No favourites yet</string>
-	<string name="add_to_favourites">Favourite this</string>
+	<string name="you_have_not_favourites_yet">No favorites yet</string>
+	<string name="add_to_favourites">Favorite this</string>
 	<string name="add_new_category">New category</string>
 	<string name="add">Add</string>
 	<string name="save">Save</string>
@@ -93,7 +93,7 @@
 	<string name="notification_sound">Notification sound</string>
 	<string name="light_indicator">LED indicator</string>
 	<string name="vibration">Vibration</string>
-	<string name="favourites_categories">Favourite categories</string>
+	<string name="favourites_categories">Favorite categories</string>
 	<string name="remove_category">Remove</string>
 	<string name="text_empty_holder_primary">It\'s kind of empty here…</string>
 	<string name="text_search_holder_secondary">Try to reformulate the query.</string>
@@ -110,7 +110,7 @@
 	<string name="cannot_find_available_storage">No available storage</string>
 	<string name="other_storage">Other storage</string>
 	<string name="done">Done</string>
-	<string name="all_favourites">All favourites</string>
+	<string name="all_favourites">All favorites</string>
 	<string name="favourites_category_empty">Empty category</string>
 	<string name="read_later">Read later</string>
 	<string name="updates">Updates</string>
@@ -152,7 +152,7 @@
 	<string name="file_not_found">File not found</string>
 	<string name="data_restored_success">All data was restored</string>
 	<string name="data_restored_with_errors">The data was restored, but there are errors</string>
-	<string name="backup_information">You can create backup of your history and favourites and restore it</string>
+	<string name="backup_information">You can create backup of your history and favorites and restore it</string>
 	<string name="just_now">Just now</string>
 	<string name="yesterday">Yesterday</string>
 	<string name="long_ago">Long ago</string>
@@ -248,7 +248,7 @@
 	<string name="edit">Edit</string>
 	<string name="edit_category">Edit category</string>
 	<string name="tracking">Tracking</string>
-	<string name="empty_favourite_categories">No favourite categories</string>
+	<string name="empty_favourite_categories">No favorite categories</string>
 	<string name="logout">Log out</string>
 	<string name="bookmark_add">Add bookmark</string>
 	<string name="bookmark_remove">Remove bookmark</string>
@@ -273,12 +273,12 @@
 	<string name="status_dropped">Dropped</string>
 	<string name="disable_all">Disable all</string>
 	<string name="use_fingerprint">Use biometric if available</string>
-	<string name="appwidget_shelf_description">Manga from your favourites</string>
+	<string name="appwidget_shelf_description">Manga from your favorites</string>
 	<string name="appwidget_recent_description">Your recently read manga</string>
 	<string name="report">Report</string>
 	<string name="show_reading_indicators">Show reading progress indicators</string>
 	<string name="data_deletion">Data deletion</string>
-	<string name="show_reading_indicators_summary">Show percentage read in history and favourites</string>
+	<string name="show_reading_indicators_summary">Show percentage read in history and favorites</string>
 	<string name="exclude_nsfw_from_history_summary">Manga marked as NSFW will never be added to the history and your progress will not be saved</string>
 	<string name="clear_cookies_summary">Can help in case of some issues. All authorizations will be invalidated</string>
 	<string name="show_all">Show all</string>
@@ -295,7 +295,7 @@
 	<string name="no_manga_sources">No manga sources</string>
 	<string name="no_manga_sources_text">Enable manga sources to read manga online</string>
 	<string name="random">Random</string>
-	<string name="categories_delete_confirm">Are you sure you want to delete the selected favourite categories?\nAll manga in it will be lost and this cannot be undone.</string>
+	<string name="categories_delete_confirm">Are you sure you want to delete the selected favorite categories?\nAll manga in it will be lost and this cannot be undone.</string>
 	<string name="reorder">Reorder</string>
 	<string name="empty">Empty</string>
 	<string name="explore">Explore</string>
@@ -308,7 +308,7 @@
 	<string name="storage_usage">Storage usage</string>
 	<string name="available">Available</string>
 	<string name="memory_usage_pattern" translatable="false">%1$s - %2$s</string>
-	<string name="removed_from_favourites">Removed from favourites</string>
+	<string name="removed_from_favourites">Removed from favorites</string>
 	<string name="options">Options</string>
 	<string name="not_found_404">Content not found or removed</string>
 	<string name="download_summary_pattern" translatable="false">%1$s · %2$s</string>
@@ -603,7 +603,7 @@
 	<string name="pages_read_s">Pages read: %s</string>
 	<string name="alternatives">Alternatives</string>
 	<string name="migrate">Migrate</string>
-	<string name="migrate_confirmation">Manga \"%1$s\" from \"%2$s\" will be replaced with \"%3$s\" from \"%4$s\" in your history and favourites (if present)</string>
+	<string name="migrate_confirmation">Manga \"%1$s\" from \"%2$s\" will be replaced with \"%3$s\" from \"%4$s\" in your history and favorites (if present)</string>
 	<string name="manga_migration">Manga migration</string>
 	<string name="migration_completed">Migration completed</string>
 	<string name="delete_read_chapters">Delete read chapters</string>
@@ -689,7 +689,7 @@
 	<string name="sfw">SFW</string>
 	<string name="skip_all">Skip all</string>
 	<string name="stuck">Stuck</string>
-	<string name="not_in_favorites">Not in favourites</string>
+	<string name="not_in_favorites">Not in favorites</string>
 	<string name="updated_long_ago">Updated long ago</string>
 	<string name="unpopular">Unpopular</string>
 	<string name="low_rating">Low rating</string>
