Update page state management in reader

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
 	<string name="add">Add</string>
 	<string name="save">Save</string>
 	<string name="share">Share</string>
-	<string name="create_shortcut">Create shortcut…</string>
+	<string name="create_shortcut">Create shortcut</string>
 	<string name="share_s">Share %s</string>
 	<string name="search">Search</string>
 	<string name="search_manga">Search manga</string>
