--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -837,4 +837,5 @@
 	<string name="incognito_mode_hint_nsfw">This manga may contain adult content. Do you want to use incognito mode?</string>
 	<string name="incognito_for_nsfw">Incognito mode for NSFW manga</string>
 	<string name="additional_action_required">Additional action is required</string>
+	<string name="hide_from_main_screen">Hide from main screen</string>
 </resources>
