--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -842,4 +842,6 @@
 	<string name="changelog_summary">Changes history for recently released versions</string>
 	<string name="collapse">Collapse</string>
 	<string name="expand">Expand</string>
+	<string name="adblock">Block ads in browser</string>
+	<string name="adblock_summary">Block advertisement in the built-in browser (beta)</string>
 </resources>
