--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -844,4 +844,5 @@
 	<string name="expand">Expand</string>
 	<string name="adblock">Block ads in browser</string>
 	<string name="adblock_summary">Block advertisement in the built-in browser (beta)</string>
+	<string name="collapse_long_description">Collapse long description</string>
 </resources>
