Use streams for backups

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -845,4 +845,6 @@
 	<string name="adblock">Block ads in browser</string>
 	<string name="adblock_summary">Block advertisement in the built-in browser (beta)</string>
 	<string name="collapse_long_description">Collapse long description</string>
+	<string name="creating_backup">Creating backup</string>
+	<string name="share_backup">Share backup</string>
 </resources>
