--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -853,4 +853,5 @@
 	<string name="reader_multitask_summary">Allows you to keep multiple readers with different manga open at the same time</string>
 	<string name="theme_name_itsuka">Itsuka</string>
 	<string name="theme_name_totoro">Totoro</string>
+	<string name="book_effect">Yellowish background (blue filter)</string>
 </resources>
