--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -854,4 +854,5 @@
 	<string name="theme_name_itsuka">Itsuka</string>
 	<string name="theme_name_totoro">Totoro</string>
 	<string name="book_effect">Yellowish background (blue filter)</string>
+	<string name="local_storage_cleanup">Local storage cleanup</string>
 </resources>
