--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -855,4 +855,5 @@
 	<string name="theme_name_totoro">Totoro</string>
 	<string name="book_effect">Yellowish background (blue filter)</string>
 	<string name="local_storage_cleanup">Local storage cleanup</string>
+	<string name="packup_creation_failed">Failed to create backup</string>
 </resources>
