--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -859,4 +859,5 @@
 	<string name="main_screen">Main screen</string>
 	<string name="main_screen_fab">Show floating Continue button</string>
 	<string name="main_screen_fab_summary">Allows to continue reading in a one click. This button will not appear in incognito mode or when the history is empty</string>
+	<string name="error_corrupted_zip">Corrupted ZIP archive (%s)</string>
 </resources>
