--- a/app/src/nightly/res/values/strings.xml
+++ b/app/src/nightly/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
 	<string name="app_name" translatable="false">Kotatsu Nightly</string>
+	<string name="may_affect_performance">May affect performance</string>
 </resources>
