feat: Add Discord Rich Presence (Discord RPC) integration

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -860,4 +860,10 @@
 	<string name="main_screen_fab">Show floating Continue button</string>
 	<string name="main_screen_fab_summary">Allows to continue reading in a one click. This button will not appear in incognito mode or when the history is empty</string>
 	<string name="error_corrupted_zip">Corrupted ZIP archive (%s)</string>
+	<string name="discord" translatable="false">Discord</string>
+	<string name="discord_rpc">Discord Rich Presence</string>
+	<string name="discord_token">Discord Token</string>
+	<string name="discord_token_summary">Enter your Discord Token to enable Rich Presence</string>
+	<string name="discord_token_hint">Paste your Discord Token here</string>
+	<string name="discord_rpc_summary">Show your reading status on Discord</string>
 </resources>
