--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -900,4 +900,6 @@
     <string name="data_removal">Data removal</string>
     <string name="privacy">Privacy</string>
     <string name="source_broken_warning">This manga source has been marked as broken. Some features may not work</string>
+    <string name="delete_all_chapters">Delete all chapters</string>
+    <string name="disable_broken_sources">Disable broken sources</string>
 </resources>
